Overflow fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,7 +15,6 @@ nav {
   padding-right: 10px;
   margin-top: -40px;
   -ms-overflow-style: none;
-  overflow: -moz-scrollbars-none;
   &::-webkit-scrollbar { width: 0 !important }
 }
 
